fix highlight on mobile

--- a/jsappapi/2.3.2/interfaces/material.css
+++ b/jsappapi/2.3.2/interfaces/material.css
@@ -449,3 +449,7 @@ input:checked+.slider:before {
     justify-content: flex-start;
     align-items: center;
 }
+
+* {
+    -webkit-tap-highlight-color: transparent;
+}
